<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="2dp"
    tools:context="com.example.mirmhrakib.mydemoapplication.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="2dp"
            android:onClick="goClassBaseRepo">
            <TextView
                android:id="@+id/menu1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menuText1"
                android:textSize="17sp"
                android:gravity="center"
                android:background="#1B4F72"
                android:textColor="#ffffff"
                android:padding="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="2dp"
            android:onClick="goSituationBaseRepo">
            <TextView
                android:id="@+id/menu2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menuText2"
                android:textSize="17sp"
                android:gravity="center"
                android:background="#5B2C6F"
                android:textColor="#ffffff"
                android:padding="10dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="2dp"
            android:onClick="goTypeBaseRepo">
            <TextView
                android:id="@+id/menu3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menuText3"
                android:textSize="17sp"
                android:gravity="center"
                android:background="#581845"
                android:textColor="#ffffff"
                android:padding="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="2dp"
            android:onClick="goAreaBaseRepo">
            <TextView
                android:id="@+id/menu4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menuText4"
                android:textSize="17sp"
                android:gravity="center"
                android:background="#900C3F"
                android:textColor="#ffffff"
                android:padding="10dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="2dp"
            android:onClick="goCozListRepo">
            <TextView
                android:id="@+id/menu5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menuText5"
                android:textSize="17sp"
                android:gravity="center"
                android:background="#C70039"
                android:textColor="#ffffff"
                android:padding="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="2dp"
            android:onClick="goYearlyAppealRepo">
            <TextView
                android:id="@+id/menu6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menuText6"
                android:textSize="17sp"
                android:gravity="center"
                android:background="#FF5733"
                android:textColor="#ffffff"
                android:padding="10dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="2dp"
            android:onClick="goContact">
            <TextView
                android:id="@+id/menu7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menuText7"
                android:textSize="17sp"
                android:gravity="center"
                android:background="#F39C12"
                android:textColor="#ffffff"
                android:padding="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="2dp"
            android:onClick="goAboutUs">
            <TextView
                android:id="@+id/menu8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menuText8"
                android:textSize="17sp"
                android:gravity="center"
                android:background="#28B463"
                android:textColor="#ffffff"
                android:padding="10dp"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
